Fix scrollbar for window inspector
The inspector tab contents was overflowing its parent and being clipped,
which prevented each of its child panes from being scrollable. Limit the
height of the .pane-container to prevent that from happening.

This fixes scrolling for both Safari and Chrome.

--- a/src/inspector/inspector.css
+++ b/src/inspector/inspector.css
@@ -96,6 +96,7 @@
 .inspector .pane-container {
     display: -webkit-flex;
     display: flex;
+	max-height: 100%;
 }
 
 .inspector .pane-container > div {
